Fix non-wrapping width & overflow

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,4 +16,8 @@ body {
   }
 }
 
+.auto-scroll-x {
+  overflow-x: auto;
+}
+
 @import 'tutor';
